<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cvc"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:cardElevation="10dp"

        >

        <FrameLayout
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:background="#fafafa">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/nombre"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                        <TextView
                            android:id="@+id/tvc1"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="TextView"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/estado"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                        <TextView
                            android:id="@+id/tvc2"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="TextView"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/inversion"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                        <TextView
                            android:id="@+id/tvc3"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="TextView"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="@string/cambios"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvc4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/logoconstruccioncard" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="40dp"
        android:layout_height="30dp" />

</LinearLayout>